--- a/coupons/lib/web/couponsMain.html
+++ b/coupons/lib/web/couponsMain.html
@@ -1,1 +1,16 @@
-<h1>No elixir!!!</h1>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+<form>
+  First name:<br>
+  <input type="text" name="firstname" class="firstname"><br>
+  Last name:<br>
+  <input type="text" name="lastname">
+</form>
+
+<p>My first paragraph.</p>
+
+</body>
+</html>
