added login and register pages&functionality

--- a/coupons/lib/web/couponsMain.html
+++ b/coupons/lib/web/couponsMain.html
@@ -2,15 +2,11 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<form>
-  First name:<br>
-  <input type="text" name="firstname" class="firstname"><br>
-  Last name:<br>
-  <input type="text" name="lastname">
-</form>
+<h1>Coupons App</h1>
 
-<p>My first paragraph.</p>
+<button onclick="window.location.href='/login'">Login</button>
+<button onclick="window.location.href='/register'">Register</button>
+
 
 </body>
 </html>
