--- a/coupons/lib/web/login.html
+++ b/coupons/lib/web/login.html
@@ -383,7 +383,7 @@
         <div class="container">
 
             <header>
-                <h1>Coupons For Sale</span></h1>
+                <br><br><br>
             </header>
             <section>
                 <div id="container_demo" >
@@ -395,12 +395,12 @@
                             <form action="/login" method="POST">
                                 <h1>Log in</h1>
                                 <p>
-                                    <label for="email" class="uname" data-icon="u" > Your email </label>
-                                    <input id="email" name="email" required="required" type="text" placeholder="myusername or mymail@mail.com"/>
+                                    <label for="email" class="uname"> Your email </label>
+                                    <input id="email" name="email" required="required" type="text" placeholder="email@mail.com"/>
                                 </p>
                                 <p>
-                                    <label for="password" class="youpasswd" data-icon="p"> Your password </label>
-                                    <input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" />
+                                    <label for="password" class="youpasswd"> Your password </label>
+                                    <input id="password" name="password" required="required" type="password" placeholder="Password" />
                                 </p>
                                 <p class="keeplogin">
 									<input type="checkbox" name="loginkeeping" id="loginkeeping" value="loginkeeping" />
@@ -409,7 +409,7 @@
                                 <p class="login button">
                                     <input type="submit" value="Submit" />
 								</p>
-                              
+
                             </form>
                         </div>
 
