--- a/coupons/lib/web/add_coupon.html
+++ b/coupons/lib/web/add_coupon.html
@@ -2,36 +2,6 @@
 <html>
 
 <body>
-
-<script type="text/javascript">
-function GetURLParameter(sParam)
-{
-    var sPageURL = window.location.search.substring(1);
-    var sURLVariables = sPageURL.split('&');
-    for (var i = 0; i < sURLVariables.length; i++) 
-    {
-        var sParameterName = sURLVariables[i].split('=');
-        if (sParameterName[0] == sParam) 
-        {
-            return sParameterName[1];
-        }
-    }
-}​
-
-var userId = GetURLParameter('user_id');
-var giverId = GetURLParameter('giver_id');
-var couponId = GetURLParameter('coupon_id');
-
-document.getElementById("giver_id").innerHTML = giverId.toString();
-document.getElementById("user_id").innerHTML = userId.toString();
-document.getElementById("coupon_id").innerHTML = couponId.toString();
-
-console.log(giverId);
-console.log(userId);
-console.log(couponId);
-
-</script>
-
 <h1>Add Coupon </h1>
 <h2>In order to see a coupon you have to add one first</h2>
 
@@ -52,4 +22,25 @@ console.log(couponId);
 
 
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$( document ).ready(function() {
+  function getParameterByName(name, url) {
+    if (!url) url = window.location.href;
+    name = name.replace(/[\[\]]/g, "\\$&");
+    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+        results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, " "));
+}
+
+var giver_id = getParameterByName('giver_id');
+var user_id = getParameterByName('user_id');
+var coupon_id = getParameterByName('coupon_id');
+$('#giver_id').val(giver_id);
+$('#user_id').val(user_id);
+$('#coupon_id').val(coupon_id);
+});
+</script>
 </html>
