the best looking add coupon page

--- a/coupons/lib/web/register.html
+++ b/coupons/lib/web/register.html
@@ -395,11 +395,11 @@
 													<form action="/register" method="POST">
 															<h1> Sign up </h1>
 															<p>
-																	<label for="first_name" class="uname">Your username</label>
+																	<label for="first_name" class="uname">Your first name</label>
 																	<input id="first_name" name="first_name" required="required" type="text" placeholder="First Name" />
 															</p>
 															<p>
-																	<label for="last_name" class="uname">Your username</label>
+																	<label for="last_name" class="uname">Your last name</label>
 																	<input id="last_name" name="last_name" required="required" type="text" placeholder="Last Name" />
 															</p>
 															<p>
